<resources>
    <string name="app_name" translatable="false">Agramonia</string>
    <string name="file_provider_authority" translatable="false">com.blackspider.agramonia.fileprovider</string>

    <string name="title_scanner_activity">Scanner</string>
    <string name="title_tourist_activity">Tourist</string>
    <string name="title_login_activity">Log in</string>
    <string name="title_registration_activity">Registration</string>
    <string name="title_barcode_generator_activity">Barcode Generator</string>

    <string name="label_scan_qr_code">Scan QR Code</string>
    <string name="label_tourist_title">
        Hello!\nPlease scan the QR code of the product to see it\'s farmer!
    </string>
    <string name="label_tourist">I am a Tourist</string>
    <string name="label_farmer">I am a Farmer</string>
    <string name="label_login">Log in</string>
    <string name="label_registration">Registration</string>
    <string name="label_or">Or</string>
    <string name="label_create_blog">Create Blog</string>
    <string name="label_create">Create</string>
    <string name="label_barcode">Barcode</string>
    <string name="label_logout">Log out</string>
    <string name="label_yes">YES</string>
    <string name="label_cancel">CANCEL</string>
    <string name="label_add_photos">Add photos</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="label_no_blog">No blog found</string>
    <string name="label_save">Save</string>

    <string name="hint_email_address">Your email address</string>
    <string name="hint_password">Your password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_location">Your Location</string>
    <string name="hint_phone">Your Phone Number</string>
    <string name="hint_answer1">
        1.	Do you have animals? Can you show them to us?
    </string>
    <string name="hint_answer2">
        2.	Do you like your animals? Which one is your favourite? Why?
    </string>
    <string name="hint_answer3">
        3.	Can you show us some pictures of your Home? What do you produce at home?
        Where you have learned all this?
    </string>
    <string name="hint_answer4">
        4.	Would you like to say anything to the people living in big cities?
    </string>
    <string name="hint_answer5">
        5.	What is your hope for the future?
    </string>
    <string name="hint_title">Please type a title</string>
    <string name="hint_description">Please type a proper description</string>
    <string name="hint_answer">Your answer</string>
    <string name="hint_generating_barcode">Generating barcode</string>
    <string name="hint_barcode_generated">Generating barcode</string>

    <string name="description_img_logo" translatable="false">Image Logo</string>
    <string name="description_ic_camera" translatable="false">Icon camera</string>

    <string name="default_web_address" translatable="false">www.agramonia.com</string>
    <string name="path_to_farmer_profile" translatable="false">/farmer/</string>

    <!-- exceptions -->
    <string name="invalid_qr_code_exception">Oops! Invalid QR code.</string>
    <string name="scan_canceled_exception">Oops! Scanning cancelled.</string>
    <string name="no_browser_found_exception">Ops! Please install a browser first!</string>
    <string name="camera_permission_denied_exception">
        Camera permission is required to scan bar-code
    </string>
    <string name="email_required_exception">Email required</string>
    <string name="password_required_exception">Password required</string>
    <string name="name_required_exception">Name required</string>
    <string name="image_required_exception">Image required</string>
    <string name="location_required_exception">Location required</string>
    <string name="phone_required_exception">Phone number required</string>
    <string name="answer_required_exception">Answer required</string>
    <string name="invalid_image_exception">Invalid image</string>
    <string name="title_required_exception">Title Required</string>
    <string name="description_required_exception">Description required</string>

    <string name="filter_view_http_open_agramonia">Open Agramonia</string>

    <string name="logout_confirmation">Are you surely want to logout?</string>
    <string name="create_blog_confirmation">Create this blog?</string>
    <string name="create_profile_confirmation">Create profile?</string>

    <string name="language">Language</string>
    <string name="change_language">Change language</string>
    <string name="select_language">Select language</string>

    <string name="question_1_en" translatable="false">
        <!--How many people are in your family and what are their dreams and aspirations?-->
        1.	Do you have animals? Can you show them to us?
    </string>
    <string name="question_2_en" translatable="false">
        <!--If given the possibility, would you host a dinner for one of the customers who bought-->
        <!--your products?-->
        2.	Do you like your animals? Which one is your favourite? Why?
    </string>
    <string name="question_3_en" translatable="false">
        <!--Would you consider industrialization of the farming process is a good thing? Why?-->
        3.	Can you show us some pictures of your Home? What do you produce at home?
        Where you have learned all this?
    </string>
    <string name="question_4_en" translatable="false">
        <!--How do you feel knowing your marmalade is being sold abroad?-->
        4.	Would you like to say anything to the people living in big cities?
    </string>
    <string name="question_5_en" translatable="false">
        <!--Would you like to say anything to the people living in big cities?-->
        5.	What is your hope for the future?
    </string>

    <string name="question_1_de" translatable="false">
        Wie viele Mitglieder hat deine Familie? Von was träumen diese und was sind ihre
        Bestrebungen?
    </string>
    <string name="question_2_de" translatable="false">
        Wenn Sie die Möglichkeit hätten, würden Sie gerne die Kunden eines Ihrer Produkte zum
        Abendessen laden?
    </string>
    <string name="question_3_de" translatable="false">
        Würden sie die Industrialisierung der Landwirtschaft insgesamt als eine eher positive,
        oder eher negative Tendenz beschreiben? Wieso?
    </string>
    <string name="question_4_de" translatable="false">
        Wie fühlt es sich an zu wissen, dass ihre Marmelade in anderen Ländern verkauft wird?
    </string>
    <string name="question_5_de" translatable="false">
        Was wollen Sie zu den Menschen sagen, die in Großstädten Leben?
    </string>

    <string name="question_1_ro" translatable="false">
        Cați membri are familia dvs si care sunt visurile si aspirațiile lor?
    </string>
    <string name="question_2_ro" translatable="false">
        Daca ati avea posibilitatea, ati invita unul din clientii ce v-au cumparat produsul
        a o cina?
    </string>
    <string name="question_3_ro" translatable="false">
        Considerati ca industrializarea agriculturii este un lucru bun? De ce?
    </string>
    <string name="question_4_ro" translatable="false">
        Ce parere aveti de faptul ca produsele dvs sunt vandute in strainatate?
    </string>
    <string name="question_5_ro" translatable="false">
        Ati dori sa le transmiteti ceva oamenilor ce locuiesc in marile orase?
    </string>
    <string name="label_add_answer_photos">Add Photo</string>
    <string name="question_save_message">Save the information?</string>
    <string name="unknown_exception">Ops! Please try again.</string>
    <string name="label_create_service">Create Service</string>
    <string name="hint_price">Please type a price</string>
</resources>
