<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/hint_answer1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/til_ans"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_q"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/rv_photos">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:hint="@string/hint_answer"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photos"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_ans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_photo" />

        <Button
            android:id="@+id/btn_add_photo"
            style="@style/ActionButton.Medium"
            android:layout_marginTop="10dp"
            android:text="@string/label_add_answer_photos"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/rv_photos"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_save"
            style="@style/ActionButton.Medium"
            android:layout_marginTop="10dp"
            android:text="@string/label_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_photos"/>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>