<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".ui.farmer.registration.RegistrationActivity">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/avatar_width"
                android:layout_height="@dimen/avatar_height"
                android:layout_marginBottom="10dp"
                tools:src="@drawable/img_farmer"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"
                app:civ_shadow_radius="4"
                android:shadowColor="@color/colorPrimaryDark"
                android:visibility="invisible"
                android:onClick="onClickPickUserImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/til_location"/>

            <ImageButton
                android:id="@+id/btn_choose_photo"
                android:layout_width="@dimen/avatar_width"
                android:layout_height="@dimen/avatar_height"
                android:background="@drawable/shape_circle"
                app:srcCompat="@drawable/ic_camera"
                android:contentDescription="@string/description_ic_camera"
                android:onClick="onClickPickUserImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toEndOf="@+id/img_profile"
                app:layout_constraintTop_toTopOf="@+id/img_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/img_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/hint_full_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/til_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/hint_location"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rv_photos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:hint="@string/hint_phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photos"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_phone" />

            <Button
                android:id="@+id/btn_add_photo"
                style="@style/ActionButton.Medium"
                android:layout_marginTop="10dp"
                android:text="@string/label_add_photos"
                android:onClick="onClickPickFamilyImage"
                app:layout_constraintTop_toBottomOf="@+id/rv_photos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_register" />

            <Button
                android:id="@+id/btn_register"
                style="@style/ActionButton.Medium"
                android:layout_marginTop="10dp"
                android:text="@string/label_registration"
                android:onClick="onClickRegistration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_photos"/>

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_register"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>